# obs-scoreboard-assistant

./: .env  .gitignore  Cargo.toml  Procfile  README.md  app.json  package-lock.json  package.json  server.js
migrations/2019-07-08-031224_create_players/: down.sql  up.sql
migrations/2019-07-16-005023_create_name_list_storage/: up.sql
public/: index.html
src/: App.vue  lib.rs  main.js  main.rs  models.rs  schema.rs
src/assets/: db-overlay.css  kq-overlay.css
src/components/: EditView.vue  NavigationView.vue  Overlay.vue  PlayerEdit.vue  SetNames.vue
