[package]
name = "obs_scoreboard_assistant"
version = "0.1.0"
authors = ["Christopher S. Corley <cscorley@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
fern = "0.5"
chrono = { version = "0.4.7", features = ["serde"]}
diesel = { version = "1.4.2", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.14.1"
actix-web = "1.0"
actix-files = "0.1.3"
serde = "1.0"
uuid = { version= "0.6", features = ["serde"]}
