[package]
name = "obs_scoreboard_assistant"
version = "0.1.0"
authors = ["Christopher S. Corley <cscorley@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
fern = "0.6.0"
chrono = { version = "0.4.11", features = ["serde"]}
diesel = { version = "1.4.4", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.15.0"
actix-web = "1.0.9"
actix-files = "0.1.7"
serde = "1.0"
uuid = { version= "0.6.5", features = ["serde"]}
